[project]
name = "llm"
authors = [
  { name="Caspar Nettelbladt", email="caspar.n@gmail.com" },
]
version = "0.1.1"
description = "A python package for interacting with the OpenAI API"
readme = "README.md"
dependencies=[
  "openai",
  "requests",
  "pygments",
  "click",
]
package = "llm"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
skip-string-normalization = true

# [tool.ruff]
# select = [
#     "E",  # pycodestyle errors
#     "W",  # pycodestyle warnings
#     "F",  # pyflakes
#     "I",  # isort
#     "C",  # flake8-comprehensions
#     "B",  # flake8-bugbear
# ]
# ignore = [
#     "E501",  # line too long, handled by black
#     "B008",  # do not perform function calls in argument defaults
#     "C901",  # too complex
# ]
