[tool.poetry]
name = "python-scripts"
version = "0.1.4"
description = "A python package for interacting with the OpenAI API"
authors = ["Caspar Nettelbladt <caspar.n@gmail.com>"]
readme = "README.md"
packages = [
  { include = ".", from = "llm" },
]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true

# [tool.ruff]
# select = [
#     "E",  # pycodestyle errors
#     "W",  # pycodestyle warnings
#     "F",  # pyflakes
#     "I",  # isort
#     "C",  # flake8-comprehensions
#     "B",  # flake8-bugbear
# ]
# ignore = [
#     "E501",  # line too long, handled by black
#     "B008",  # do not perform function calls in argument defaults
#     "C901",  # too complex
# ]
